--- a/Ch14_task.ipynb
+++ b/Ch14_task.ipynb
@@ -47,7 +47,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "3"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -80,7 +82,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "False"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -113,7 +117,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "3"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -155,7 +161,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "4"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -190,7 +198,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "5"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -230,7 +240,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1,4"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -263,7 +275,10 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1. int(input()) 으로 수정해서 count를 int 값으로 받아야됨\n",
+    "2. for문 조건의 끝에 : 달아야 됨"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -299,7 +314,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -340,7 +357,12 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "오피스텔 = [ [201, 202], [301, 302], [401, 402] ]\n",
+    "\n",
+    "for i in range(len(오피스텔)) :\n",
+    "    print(f'{오피스텔[i][0]}호\\n{오피스텔[i][1]}호\\n----')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -369,7 +391,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "for i in range(1,len(ohlc)) :\n",
+    "    if ohlc[i][3] > 150 :\n",
+    "        print(ohlc[i][3])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -409,7 +435,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "4"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -442,7 +470,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "2,3"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -469,7 +499,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "x = 100\n",
+    "while True :\n",
+    "    if x % 23 == 0 :\n",
+    "        print(x)\n",
+    "        break  \n",
+    "    else :\n",
+    "        x += 1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -480,8 +518,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
