로직 추론 완료

--- a/Chaoter0116_task.ipynb
+++ b/Chaoter0116_task.ipynb
@@ -66,10 +66,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "팥붕어빵 : 10개\n",
+      "슈크림붕어빵 : 8개\n",
+      "초코붕어빵 : 5개\n"
+     ]
+    }
+   ],
+   "source": [
+    "stock = {\"팥붕어빵\" : 10 , \"슈크림붕어빵\" : 8 , \"초코붕어빵\" : 5}\n",
+    "\n",
+    "for name, num in stock.items() :\n",
+    "    print(f'{name} : {num}개')\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -87,10 +102,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "주문하실 팥붕어빵의 갯수를 입력해주세요.\n",
+      "주문하실 슈크림붕어빵의 갯수를 입력해주세요.\n",
+      "주문하실 초코붕어빵의 갯수를 입력해주세요.\n",
+      "주문 내역은 다음과 같습니다.\n",
+      "팥붕어빵 2개\n",
+      "초코붕어빵 5개\n"
+     ]
+    }
+   ],
+   "source": [
+    "order = {\"팥붕어빵\" : 0 , \"슈크림붕어빵\" : 0 , \"초코붕어빵\" : 0}\n",
+    "\n",
+    "for name in order.keys() :\n",
+    "    print(f'주문하실 {name}의 갯수를 입력해주세요.')\n",
+    "    order[name] = int(input())\n",
+    "\n",
+    "print('주문 내역은 다음과 같습니다.')\n",
+    "for name, num in order.items() :\n",
+    "    if num == 0 :\n",
+    "        pass\n",
+    "    else :\n",
+    "        print(f'{name} {num}개')\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -109,10 +150,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "주문하실 팥붕어빵의 갯수를 입력해주세요.\n",
+      "4\n",
+      "주문하실 슈크림붕어빵의 갯수를 입력해주세요.\n",
+      "5\n",
+      "주문하실 초코붕어빵의 갯수를 입력해주세요.\n",
+      "6\n",
+      "재고가 부족하여 초코붕어빵을 구매하실 수 없습니다.\n",
+      "주문 내역은 다음과 같습니다.\n",
+      "팥붕어빵 4개\n",
+      "슈크림붕어빵 5개\n",
+      "남아있는 팥붕어빵은 6개 입니다.\n",
+      "남아있는 슈크림붕어빵은 3개 입니다.\n",
+      "남아있는 초코붕어빵은 5개 입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "stock = {\"팥붕어빵\" : 10 , \"슈크림붕어빵\" : 8 , \"초코붕어빵\" : 5}\n",
+    "order = {\"팥붕어빵\" : 0 , \"슈크림붕어빵\" : 0 , \"초코붕어빵\" : 0}\n",
+    "\n",
+    "for name in order.keys() :\n",
+    "    print(f'주문하실 {name}의 갯수를 입력해주세요.')\n",
+    "    order[name] = int(input())\n",
+    "    print(order[name])\n",
+    "    if stock[name] >= order[name] :\n",
+    "        stock[name] = stock[name] - order[name]\n",
+    "    else :\n",
+    "        print(f'재고가 부족하여 {name}을 구매하실 수 없습니다.')\n",
+    "        order[name] = 0\n",
+    "\n",
+    "print('주문 내역은 다음과 같습니다.')\n",
+    "for name, num in order.items() :\n",
+    "    if num == 0 :\n",
+    "        pass\n",
+    "    else :\n",
+    "        print(f'{name} {num}개')\n",
+    "\n",
+    "for name, num in stock.items() :\n",
+    "    print(f'남아있는 {name}은 {num}개 입니다.')\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -130,10 +214,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "남아있는 팥붕어빵은 10개 입니다.\n",
+      "남아있는 슈크림붕어빵은 8개 입니다.\n",
+      "남아있는 초코붕어빵은 5개 입니다.\n",
+      "주문하실 팥붕어빵의 갯수를 입력해주세요.\n",
+      "4\n",
+      "주문하실 슈크림붕어빵의 갯수를 입력해주세요.\n",
+      "5\n",
+      "주문하실 초코붕어빵의 갯수를 입력해주세요.\n",
+      "6\n",
+      "재고가 부족하여 초코붕어빵을 구매하실 수 없습니다.\n",
+      "주문 내역은 다음과 같습니다.\n",
+      "팥붕어빵 4개\n",
+      "슈크림붕어빵 5개\n",
+      "남아있는 팥붕어빵은 6개 입니다.\n",
+      "남아있는 슈크림붕어빵은 3개 입니다.\n",
+      "남아있는 초코붕어빵은 5개 입니다.\n",
+      "주문을 그만 하시려면 '종료'를 입력해주세요.\n",
+      "주문을 계속합니다.\n",
+      "주문하실 팥붕어빵의 갯수를 입력해주세요.\n",
+      "6\n",
+      "주문하실 슈크림붕어빵의 갯수를 입력해주세요.\n",
+      "5\n",
+      "재고가 부족하여 슈크림붕어빵을 구매하실 수 없습니다.\n",
+      "주문하실 초코붕어빵의 갯수를 입력해주세요.\n",
+      "4\n",
+      "주문 내역은 다음과 같습니다.\n",
+      "팥붕어빵 6개\n",
+      "초코붕어빵 4개\n",
+      "남아있는 팥붕어빵은 0개 입니다.\n",
+      "남아있는 슈크림붕어빵은 3개 입니다.\n",
+      "남아있는 초코붕어빵은 1개 입니다.\n",
+      "주문을 그만 하시려면 '종료'를 입력해주세요.\n",
+      "주문을 종료합니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "stock = {\"팥붕어빵\" : 10 , \"슈크림붕어빵\" : 8 , \"초코붕어빵\" : 5}\n",
+    "order = {\"팥붕어빵\" : 0 , \"슈크림붕어빵\" : 0 , \"초코붕어빵\" : 0}\n",
+    "\n",
+    "for name, num in stock.items() :\n",
+    "    print(f'남아있는 {name}은 {num}개 입니다.')\n",
+    "\n",
+    "while True :\n",
+    "\n",
+    "    for name in order.keys() :\n",
+    "        print(f'주문하실 {name}의 갯수를 입력해주세요.')\n",
+    "        order[name] = int(input())\n",
+    "        print(order[name])\n",
+    "        if stock[name] >= order[name] :\n",
+    "            stock[name] = stock[name] - order[name]\n",
+    "        else :\n",
+    "            print(f'재고가 부족하여 {name}을 구매하실 수 없습니다.')\n",
+    "            order[name] = 0\n",
+    "\n",
+    "    print('주문 내역은 다음과 같습니다.')\n",
+    "\n",
+    "    for name, num in order.items() :\n",
+    "        if num == 0 :\n",
+    "            pass\n",
+    "        else :\n",
+    "            print(f'{name} {num}개')\n",
+    "    \n",
+    "    for name, num in stock.items() :\n",
+    "        print(f'남아있는 {name}은 {num}개 입니다.')\n",
+    "\n",
+    "    print(f\"주문을 그만 하시려면 '종료'를 입력해주세요.\")\n",
+    "    x = input()\n",
+    "    if x == '종료' :\n",
+    "        print(f'주문을 종료합니다.')\n",
+    "        break\n",
+    "    else :\n",
+    "        print(f'주문을 계속합니다.')\n",
+    "    \n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -151,10 +313,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "남아있는 팥붕어빵은 10개 입니다.\n",
+      "남아있는 슈크림붕어빵은 8개 입니다.\n",
+      "남아있는 초코붕어빵은 5개 입니다.\n",
+      "추가하실 팥붕어빵의 갯수를 입력해주세요.\n",
+      "5\n",
+      "추가하실 슈크림붕어빵의 갯수를 입력해주세요.\n",
+      "5\n",
+      "추가하실 초코붕어빵의 갯수를 입력해주세요.\n",
+      "5\n",
+      "남아있는 팥붕어빵은 15개 입니다.\n",
+      "남아있는 슈크림붕어빵은 13개 입니다.\n",
+      "남아있는 초코붕어빵은 10개 입니다.\n",
+      "관리자 모드를 종료하시려면 '종료'를 입력해주세요\n",
+      "재고 추가를 종료합니다.\n",
+      "남아있는 팥붕어빵은 15개 입니다.\n",
+      "남아있는 슈크림붕어빵은 13개 입니다.\n",
+      "남아있는 초코붕어빵은 10개 입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "stock = {\"팥붕어빵\" : 10 , \"슈크림붕어빵\" : 8 , \"초코붕어빵\" : 5}\n",
+    "add_bread = {\"팥붕어빵\" : 10 , \"슈크림붕어빵\" : 8 , \"초코붕어빵\" : 5}\n",
+    "\n",
+    "\n",
+    "for name, num in stock.items() :\n",
+    "    print(f'남아있는 {name}은 {num}개 입니다.')\n",
+    "\n",
+    "admin_mod = input()\n",
+    "\n",
+    "if admin_mod == '관리자모드' :\n",
+    "\n",
+    "    while True :\n",
+    "\n",
+    "        for name in add_bread.keys() :\n",
+    "            print(f'추가하실 {name}의 갯수를 입력해주세요.')\n",
+    "            add_bread[name] = int(input())\n",
+    "            print(add_bread[name])\n",
+    "            stock[name] = stock[name] + add_bread[name]\n",
+    "    \n",
+    "        for name, num in stock.items() :\n",
+    "            print(f'남아있는 {name}은 {num}개 입니다.')\n",
+    "\n",
+    "        print(f\"관리자 모드를 종료하시려면 '종료'를 입력해주세요\")\n",
+    "        y = input()\n",
+    "        if y == '종료' :\n",
+    "            print(f'재고 추가를 종료합니다.')\n",
+    "            break\n",
+    "        else :\n",
+    "            print(f'재고 추가를 계속합니다.')\n",
+    "\n",
+    "for name, num in stock.items() :\n",
+    "    print(f'남아있는 {name}은 {num}개 입니다.')\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -183,10 +405,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "주문하실 팥붕어빵의 갯수를 입력해주세요.\n",
+      "1\n",
+      "주문하실 슈크림붕어빵의 갯수를 입력해주세요.\n",
+      "1\n",
+      "주문하실 초코붕어빵의 갯수를 입력해주세요.\n",
+      "1\n",
+      "3700\n"
+     ]
+    }
+   ],
+   "source": [
+    "price = {\"팥붕어빵\" : 1000 , \"슈크림붕어빵\" : 1200 , \"초코붕어빵\" : 1500}\n",
+    "sell = {\"팥붕어빵\" : 0 , \"슈크림붕어빵\" : 0 , \"초코붕어빵\" : 0}\n",
+    "order = {\"팥붕어빵\" : 0 , \"슈크림붕어빵\" : 0 , \"초코붕어빵\" : 0}\n",
+    "total_sales = 0\n",
+    "\n",
+    "for name in order.keys() :\n",
+    "    print(f'주문하실 {name}의 갯수를 입력해주세요.')\n",
+    "    order[name] = int(input())\n",
+    "    print(order[name])\n",
+    "    sell[name] += order[name]\n",
+    "\n",
+    "for name in order.keys() :\n",
+    "    total_sales += price[name] * sell[name]\n",
+    "\n",
+    "print(total_sales)\n"
+   ]
   }
  ],
  "metadata": {
@@ -208,7 +460,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
